--- a/appsettings.json
+++ b/appsettings.json
@@ -11,6 +11,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     // "DefaultConnection": "Server=.;Database=DBBorrowing;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-    "DefaultConnection": "workstation id=DBBorrowing.mssql.somee.com;packet size=4096;user id=kenley1906_SQLLogin_1;pwd=dtyxwpwfps;data source=DBBorrowing.mssql.somee.com;persist security info=False;initial catalog=DBBorrowing;TrustServerCertificate=True"
+    //"DefaultConnection": "workstation id=DBBorrowing.mssql.somee.com;packet size=4096;user id=kenley1906_SQLLogin_1;pwd=dtyxwpwfps;data source=DBBorrowing.mssql.somee.com;persist security info=False;initial catalog=DBBorrowing;TrustServerCertificate=True"
+    "DefaultConnection": "User Id=postgres.mzahjjxfrzalfapwsqhr;Password=kenleyG#1906;Server=aws-0-us-east-2.pooler.supabase.com;Port=5432;Database=postgres"
+
   }
 }
